--- a/android/RemoteTouch/app/src/main/res/values/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
-    <string name="app_name">RemoteTouch</string>
-    <string name="action_settings">Settings</string>
-    <string name="check_nl_permission">Zkontrolovat povolení pro odchyt notifikací</string>
-    <string name="yes">Ano</string>
-    <string name="no">Ne</string>
+    <string name="Application.Name">RemoteTouch</string>
+
+    <string name="Actions.Settings">Settings</string>
+    <string name="Actions.OK">OK</string>
+    <string name="Actions.Yes">Ano</string>
+    <string name="Actions.No">Ne</string>
+
+    <string name="NotificationHandler.PersistentNotification.Text">Persistent notification</string>
+
+    <string name="check_nl_permission">Zkontrolujte povolení pro odchyt notifikací.</string>
     <string name="permission">Oprávnění</string>
 </resources>
