--- a/android/RemoteTouch/app/src/main/res/values/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="Actions.Yes">Ano</string>
     <string name="Actions.No">Ne</string>
 
+    <string name="Intent.Action.NewEvent" translatable="false">cz.zelenikr.remotetouch.action.NEW_EVENT</string>
+
     <string name="NotificationAccessService.PersistentNotification.Text">Běží...</string>
     <string name="NotificationAccessService.Label">NotificationAccessService</string>
 
