--- a/android/RemoteTouch/app/src/main/res/values/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="check_nl_permission">Zkontrolujte povolení pro odchyt notifikací.</string>
     <string name="permission">Oprávnění</string>
     <string name="empty">Prázdný</string>
+    <string name="check_sms_permissions">Aby Vás mohla aplikace upozornit na novou sms, potřebuje povolit přístup k Vašim SMS zprávam.</string>
 </resources>
