--- a/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
@@ -10,21 +10,34 @@
 
     <string name="NotificationAccessService.PersistentNotification.Text">Běží...</string>
 
-    <string name="check_nl_permission">Zkontrolujte povolení pro odchyt notifikací.</string>
+    <string name="check_nl_permission">Aplikace potřebuje povolit přístup k notifikacím.</string>
     <string name="check_sms_permissions">Aby Vás mohla aplikace upozornit na novou sms, potřebuje povolit přístup k Vašim SMS zprávam.</string>
     <string name="check_calling_permissions">Aby Vás mohla aplikace upozornit na příchozí či zmeškané hovory, potřebuje povolit přístup k vašim hovorům.</string>
     <string name="permission">Oprávnění</string>
     <string name="empty">Prázdný</string>
 
-    <string name="Preferences.SMS.Enable.Summary">Upozornění na příchozí SMS</string>
     <string name="Preferences.SMS.Enable.Title">Příchozí SMS</string>
-    <string name="Preferences.Title">Upozornit na</string>
-    <string name="Preferences.Calls.Enable.Summary_off">Neupozorním tě na příchozí hovor</string>
-    <string name="Preferences.Calls.Enable.Summary_on">Upozorním tě na příchozí hovor</string>
-    <string name="Preferences.Calls.Enable.Title">Příchozí hovor</string>
+    <string name="Preferences.Title">Nastavení</string>
+    <string name="Preferences.Calls.Enable.Summary_off">Upozornění je zakázáno.</string>
+    <string name="Preferences.Calls.Enable.Summary_on">Upozornění je povoleno.</string>
+    <string name="Preferences.Calls.Enable.Title">Hovory</string>
     <string name="Preferences.Notification.Title">Application alerts</string>
-    <string name="Preferences.Notification.Enable.Title">New notification</string>
-    <string name="Preferences.Notification.Enable.Summary_off">I\'ll not alert you of an new notification</string>
-    <string name="Preferences.Notification.Enable.Summary_on">I\'ll alert you of an new notification</string>
+    <string name="Preferences.Notification.Enable.Title">Nové oznámení</string>
+    <string name="Preferences.Notification.Enable.Summary_off">Upozorním tě na nové oznámení.</string>
+    <string name="Preferences.Notification.Enable.Summary_on">Neupozorním tě na nové oznámení.</string>
     <string name="check_contacts_permissions">Aplikace potřebuje zpřístupnit Vaše kontakty, aby mohla u hovoru nebo zprávy zobrazit víc než jen telefoní číslo.</string>
+    <string name="Actions_Close">Zavřít</string>
+    <string name="Actions.Add_notification">Přidat notifikaci</string>
+    <string name="Preferences.SMS.Enable.Summary_on">Upozorním tě na příchozí sms.</string>
+    <string name="Preferences.SMS.Enable.Summary_off">Neupozorním tě na příchozí sms.</string>
+    <string name="Preferences.Device.Title">Zařízení</string>
+    <string name="Preferences.Device.Name.Title">Název</string>
+    <string name="Def.Device.Name">mujTelefon</string>
+    <string name="Preferences.Alerts.Enable.Title">Upozorňovací služba</string>
+    <string name="Preferences.Alerts.Title">Vybrat upozornění</string>
+    <string name="Preferences.Alerts.Enable.Summary_off">Služba je vypnutá. Všechna upozornění jsou zakázána.</string>
+    <string name="Preferences.Alerts.Enable.Summary_on">Služba je zapnutá.</string>
+    <string name="Preferences.PairKey.Summary">Klíč pro spárování s počítačovým klientem.</string>
+    <string name="Preferences.PairKey.Title">Zobrazit párovací klíč</string>
+    <string name="generate_new_pair_key">Vygeneruj nový klíč</string>
 </resources>
