Create client-token from device name and pair key. Using 128bit AES instead of 256bit AES.

--- a/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
@@ -40,4 +40,5 @@
     <string name="Preferences.PairKey.Summary">Klíč pro spárování s počítačovým klientem.</string>
     <string name="Preferences.PairKey.Title">Zobrazit párovací klíč</string>
     <string name="generate_new_pair_key">Vygeneruj nový klíč</string>
+    <string name="Actions.Developer">Vývojář</string>
 </resources>
