--- a/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
@@ -39,6 +39,6 @@
     <string name="Preferences.Alerts.Enable.Summary_on">Služba je zapnutá.</string>
     <string name="Preferences.PairKey.Summary">Klíč pro spárování s počítačovým klientem.</string>
     <string name="Preferences.PairKey.Title">Zobrazit párovací klíč</string>
-    <string name="generate_new_pair_key">Vygeneruj nový klíč</string>
+    <string name="Actions.Generate_new_pair_key">Vygeneruj nový klíč</string>
     <string name="Actions.Developer">Vývojář</string>
 </resources>
