--- a/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="Actions.Export_notification_log">Exportovat logy</string>
-    <string name="Actions.Settings">Nastavení</string>
+    <string name="Navigation.Settings">Nastavení</string>
     <string name="Actions.OK">OK</string>
     <string name="Actions.Yes">Ano</string>
     <string name="Actions.No">Ne</string>
@@ -26,7 +26,7 @@
     <string name="Preferences.Notification.Enable.Summary_off">Upozorním tě na nové oznámení.</string>
     <string name="Preferences.Notification.Enable.Summary_on">Neupozorním tě na nové oznámení.</string>
     <string name="check_contacts_permissions">Aplikace potřebuje zpřístupnit Vaše kontakty, aby mohla u hovoru nebo zprávy zobrazit víc než jen telefoní číslo.</string>
-    <string name="Actions_Close">Zavřít</string>
+    <string name="Actions.Close">Zavřít</string>
     <string name="Actions.Add_notification">Přidat notifikaci</string>
     <string name="Preferences.SMS.Enable.Summary_on">Upozorním tě na příchozí sms.</string>
     <string name="Preferences.SMS.Enable.Summary_off">Neupozorním tě na příchozí sms.</string>
@@ -40,8 +40,11 @@
     <string name="Preferences.PairKey.Summary">Klíč pro spárování s počítačovým klientem.</string>
     <string name="Preferences.PairKey.Title">Zobrazit párovací klíč</string>
     <string name="Actions.Generate_new_pair_key">Vygeneruj nový klíč</string>
-    <string name="Actions.Developer">Vývojář</string>
+    <string name="Navigation.Developer">Vývojář</string>
     <string name="unknown">Neznámý</string>
-    <string name="Actions.Notifications">Oznámení</string>
+    <string name="Navigation.Notifications">Oznámení</string>
     <string name="Actions.Search">Hledat</string>
+    <string name="Navigation.Advanced.Title">Pokročilé nastavení</string>
+    <string name="Navigation.Connection">Připojení</string>
+    <string name="Preferences.Connection.Server.Url.Title">Url adresa</string>
 </resources>
