NotificationAccessService loads selected apps. Navigation bug fixed.

--- a/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
@@ -47,4 +47,6 @@
     <string name="Navigation.Advanced.Title">Pokročilé nastavení</string>
     <string name="Navigation.Connection">Připojení</string>
     <string name="Preferences.Connection.Server.Url.Title">Url adresa</string>
+    <string name="Preferences.Notifications.Installed_apps.Title">Aplikace</string>
+    <string name="Preferences.Notifications.Installed_apps.Summary">Vyberte aplikace na jejichž notifikace chcete upozorňovat.</string>
 </resources>
