Installed apps list: select all, unselect all, show only selected

--- a/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
@@ -49,4 +49,6 @@
     <string name="Preferences.Connection.Server.Url.Title">Url adresa</string>
     <string name="Preferences.Notifications.Installed_apps.Title">Aplikace</string>
     <string name="Preferences.Notifications.Installed_apps.Summary">Vyberte aplikace na jejichž notifikace chcete upozorňovat.</string>
+    <string name="Actions.Select_all">Vybrat vše</string>
+    <string name="Actions.Unselect_all">Zrušit vše</string>
 </resources>
