--- a/android/RemoteTouch/app/src/main/res/values/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values/strings.xml
@@ -55,5 +55,7 @@
     <string name="Preferences.Connection.Server.Url.Title">Url address</string>
     <string name="Preferences.Notifications.Installed_apps.Title">Applications</string>
     <string name="Preferences.Notifications.Installed_apps.Summary">Choose apps whose notifications you are interested in.</string>
+    <string name="Actions.Select_all">Select all</string>
+    <string name="Actions.Unselect_all">Unselect all</string>
 
 </resources>
