--- a/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
+++ b/android/RemoteTouch/app/src/main/res/values-cs/strings.xml
@@ -52,4 +52,7 @@
     <string name="Actions.Select_all">Vybrat vše</string>
     <string name="Actions.Unselect_all">Zrušit vše</string>
     <string name="InstalledApps.Loading.Label">Načítání…</string>
+    <string name="Preferences.Connection.Server.Url.Try_connect_result_ok">Server %1$s je připojen.</string>
+    <string name="Preferences.Connection.Server.Url.Try_connect_result_fail">Server %1$s je nedostupný.</string>
+    <string name="Actions.Test_url_address">Ověřit url adresu</string>
 </resources>
